docs/api/qiskit/0.43/qiskit.transpiler.passes.CheckCXDirection.mdx
---
title: CheckCXDirection
description: API reference for qiskit.transpiler.passes.CheckCXDirection
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.CheckCXDirection
---

# CheckCXDirection

<Class id="qiskit.transpiler.passes.CheckCXDirection" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/transpiler/passes/utils/check_cx_direction.py" signature="CheckCXDirection(*args, **kwargs)">
  Bases: [`CheckGateDirection`](qiskit.transpiler.passes.CheckGateDirection "qiskit.transpiler.passes.utils.check_gate_direction.CheckGateDirection")

  Deprecated: use [`qiskit.transpiler.passes.CheckGateDirection`](qiskit.transpiler.passes.CheckGateDirection "qiskit.transpiler.passes.CheckGateDirection") pass instead.

  <Admonition title="Deprecated since version 0.21.0" type="danger">
    The class `qiskit.transpiler.passes.utils.check_cx_direction.CheckCXDirection` is deprecated as of qiskit-terra 0.21.0. It will be removed no earlier than 3 months after the release date. Instead, use the more generic [`CheckGateDirection`](qiskit.transpiler.passes.CheckGateDirection "qiskit.transpiler.passes.CheckGateDirection") pass.
  </Admonition>

  ## Methods

  <span id="qiskit-transpiler-passes-checkcxdirection-name" />

  ### name

  <Function id="qiskit.transpiler.passes.CheckCXDirection.name" name="name" signature="CheckCXDirection.name()">
    Return the name of the pass.
  </Function>

  <span id="qiskit-transpiler-passes-checkcxdirection-run" />

  ### run

  <Function id="qiskit.transpiler.passes.CheckCXDirection.run" name="run" signature="CheckCXDirection.run(dag)">
    Run the CheckGateDirection pass on dag.

    If dag is mapped and the direction is correct the property is\_direction\_mapped is set to True (or to False otherwise).

    **Parameters**

    **dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")) – DAG to check.
  </Function>

  ## Attributes

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.CheckCXDirection.is_analysis_pass" name="is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.CheckCXDirection.is_transformation_pass" name="is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>
</Class>

